--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
