--- a/package.json
+++ b/package.json
@@ -7,21 +7,25 @@
     "@duik/it": "^0.6.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.5.0",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
+    "firebase": "^9.6.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
+    "react-widgets": "^5.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
