--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.3",
     "bootstrap": "^5.1.3",
-    "chart.js": "^3.7.1",
+    "chart.js": "^2.6.0",
     "classnames": "^2.3.1",
     "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
-    "react-chartjs-2": "^4.0.1",
+    "react-chartjs-2": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-minimal-side-navigation": "^1.9.2",
