--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.1",
     "react-widgets": "^5.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
