--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^5.0.0",
     "react-toastify": "^9.0.1",
     "react-widgets": "^5.8.4",
+    "uid": "^2.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
