--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^2.6.0",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
@@ -26,6 +27,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.1",
     "react-widgets": "^5.8.4",
     "uid": "^2.0.0",
